made banner visible after footer fix

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -4,7 +4,7 @@
   background-size: cover;
   position: relative;
   background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("dinner.jpg");
-  height: 50%;
+  height: 50vh;
   background-position: center;
 }
 
